--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "swiper": "^8.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
