--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
+    "@material-tailwind/react": "0.3.4",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
+    "chart.js": "^3.7.0",
     "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
