--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@icon/heroicons-solid": "^0.4.2-alpha.0",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
+    "firebase": "^9.6.6",
     "heroicons-react": "^1.4.1",
     "next": "^12.0.10",
     "react": "17.0.2",
