--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
-    "@material-tailwind/react": "0.3.4",
+    "@heroicons/react": "^1.0.5",
+    "@icon/heroicons-outline": "^0.4.2-alpha.0",
+    "@icon/heroicons-solid": "^0.4.2-alpha.0",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
-    "chart.js": "^3.7.0",
+    "firebase": "^9.6.6",
+    "heroicons-react": "^1.4.1",
     "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "swiper": "^8.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
