--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.25.0",
     "firebase": "^9.6.6",
     "heroicons-react": "^1.4.1",
+    "multiselect-react-dropdown": "^2.0.17",
     "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
