--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@icon/heroicons-outline": "^0.4.2-alpha.0",
     "@icon/heroicons-solid": "^0.4.2-alpha.0",
     "@reduxjs/toolkit": "^1.7.2",
-    "axios": "^0.25.0",
+    "@stripe/stripe-js": "^1.23.0",
+    "axios": "^0.26.0",
     "firebase": "^9.6.6",
     "heroicons-react": "^1.4.1",
+    "micro": "^9.3.4",
     "multiselect-react-dropdown": "^2.0.17",
-    "next": "^12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
@@ -28,6 +30,8 @@
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
     "redux": "^4.1.2",
+    "stripe": "^8.205.0",
+    "sweetalert2": "^11.4.4",
     "swiper": "^6.7.0"
   },
   "devDependencies": {
