--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
+    "recharts": "^2.1.9",
     "redux": "^4.1.2",
     "swiper": "^6.8.4"
   },
