--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
     "redux": "^4.1.2",
+    "sweetalert2": "^11.4.4",
     "swiper": "^6.7.0"
   },
   "devDependencies": {
