--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@icon/heroicons-solid": "^0.4.2-alpha.0",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
+    "cogo-toast": "^4.2.3",
     "firebase": "^9.6.6",
     "heroicons-react": "^1.4.1",
     "multiselect-react-dropdown": "^2.0.17",
-    "next": "^12.1.0",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
