--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-modal": "^3.14.4",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.6",
@@ -30,6 +31,7 @@
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
     "redux": "^4.1.2",
+    "sweetalert2": "^11.4.4",
     "swiper": "^6.7.0"
   },
   "devDependencies": {
