--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cogo-toast": "^4.2.3",
     "firebase": "^9.6.6",
     "heroicons-react": "^1.4.1",
+    "micro": "^9.3.4",
     "multiselect-react-dropdown": "^2.0.17",
     "next": "^12.0.10",
     "react": "17.0.2",
@@ -31,6 +32,7 @@
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
     "redux": "^4.1.2",
+    "stripe": "^8.207.0",
     "sweetalert2": "^11.4.4",
     "swiper": "^6.7.0"
   },
