--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multiselect-react-dropdown": "^2.0.17",
     "next": "^12.0.10",
     "react": "17.0.2",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
@@ -28,7 +29,7 @@
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
     "redux": "^4.1.2",
-    "swiper": "^6.7.0"
+    "swiper": "^6.8.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
