--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "heroicons-react": "^1.4.1",
     "multiselect-react-dropdown": "^2.0.17",
     "next": "^12.0.10",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
+    "react-avatar": "^4.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
@@ -27,9 +29,11 @@
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
+    "react-scrollable-feed": "^1.3.1",
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
     "redux": "^4.1.2",
+    "socket.io-client": "^4.4.1",
     "swiper": "^6.7.0"
   },
   "devDependencies": {
