--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cogo-toast": "^4.2.3",
     "firebase": "^9.6.6",
     "heroicons-react": "^1.4.1",
+    "micro": "^9.3.4",
     "multiselect-react-dropdown": "^2.0.17",
     "next": "^12.0.10",
     "prop-types": "^15.8.1",
@@ -28,12 +29,15 @@
     "react-modal": "^3.14.4",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.6",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-reveal": "^1.2.2",
     "react-scrollable-feed": "^1.3.1",
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
     "redux": "^4.1.2",
     "socket.io-client": "^4.4.1",
+    "stripe": "^8.207.0",
+    "sweetalert2": "^11.4.4",
     "swiper": "^6.7.0"
   },
   "devDependencies": {
