--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.6.6",
     "heroicons-react": "^1.4.1",
     "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "multiselect-react-dropdown": "^2.0.17",
     "next": "^12.0.10",
     "prop-types": "^15.8.1",
