--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
     "cogo-toast": "^4.2.3",
+    "file-saver": "^2.0.5",
     "firebase": "^9.6.6",
     "heroicons-react": "^1.4.1",
     "micro": "^9.3.4",
