--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-modal": "^3.14.4",
+    "react-notification-badge": "^1.5.1",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.6",
-    "react-minimal-pie-chart": "^8.2.0",
     "react-reveal": "^1.2.2",
     "react-scrollable-feed": "^1.3.1",
     "react-select": "^5.2.2",
