--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
@@ -36,9 +37,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "cypress": "^9.5.1",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.6",
+    "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.18"
   }
 }
