--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cogo-toast": "^4.2.3",
     "firebase": "^9.6.6",
     "heroicons-react": "^1.4.1",
+    "install": "^0.13.0",
     "micro": "^9.3.4",
     "multiselect-react-dropdown": "^2.0.17",
     "next": "^12.0.10",
