--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
+    "react-scroll-to-top": "^1.0.8",
     "react-scrollable-feed": "^1.3.1",
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
