--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
     "cogo-toast": "^4.2.3",
+    "emailjs": "^3.7.0",
+    "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.6.6",
     "heroicons-react": "^1.4.1",
