--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.26.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-jutsu": "^3.0.3",
     "react-minimal-pie-chart": "^8.2.0",
     "react-modal": "^3.14.4",
     "react-notification-badge": "^1.5.1",
