--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-scrollable-feed": "^1.3.1",
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
+    "react-sticky-el": "^2.0.9",
     "redux": "^4.1.2",
     "socket.io-client": "^4.4.1",
     "stripe": "^8.207.0",
