--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "multiselect-react-dropdown": "^2.0.17",
-    "next": "^12.0.10",
+    "next": "^12.1.0",
     "prop-types": "^15.8.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-avatar": "^4.0.0",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
