--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-avatar": "^4.0.0",
+    "react-canvas-confetti": "^1.3.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
     "react-hot-toast": "^2.2.0",
