--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "coporate",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
+  
   "scripts": {
     "dev": "next dev",
     "build": "next build",
