--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,18 @@
+// {
+//   "extends": "next",
+//   "rules": {
+//     "react/no-unescaped-entities": "off",
+//     "@next/next/no-page-custom-font": "off"
+//   }
+// }
+
+
 {
   "extends": "next",
   "rules": {
     "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off"
+    "@next/next/no-page-custom-font": "off",
+    "@next/next/no-img-element": "off",
+    "react/no-unknown-property": "off"
   }
 }
